--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asttokens==2.4.1
+basemap-data==1.3.2
 certifi==2024.8.30
 colorama==0.4.6
 comm==0.2.2
@@ -17,6 +18,7 @@ kiwisolver==1.4.7
 matplotlib==3.8.4
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
+networkx==3.4.2
 numpy==1.26.4
 packaging==23.2
 pandas==2.2.3
