--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 pywin32==308
 pyzmq==26.2.0
+scipy==1.14.1
 six==1.16.0
 stack-data==0.6.3
 tornado==6.4.2
